[tool.poetry]
name = "repl_python3_Discord-Bot-Mk3"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
discord = "^1.7.3"
humanize = "^3.11.0"
psutil = "^5.8.0"
wikipedia = "^1.4.0"
wolframalpha = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
