[tool.poetry]
name = "discord-bot-mk3"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
aiohttp = "^3.7.4"
humanize = "^3.3.0"
wolframalpha = "^4.1.1"
psutil = "^5.8.0"
discord = {git = "https://github.com/Pycord-Development/pycord"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
