[tool.poetry]
name = "repl_python3_Discord-Bot-Mk3"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
humanize = "^3.3.0"
wolframalpha = "^4.1.1"
psutil = "^5.8.0"
discord = {git = "https://github.com/Pycord-Development/pycord#egg=py-cord[voice]"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
